--- a/views/views.xml
+++ b/views/views.xml
@@ -1,5 +1,19 @@
 <odoo>
   <data>
+
+      <!-- Inherit Form View to Modify it -->
+      <record id="emsin.hr_contract_view_form" model="ir.ui.view">
+          <field name="name">emsin.hr.contract.view.form</field>
+          <field name="model">hr.contract</field>
+          <field name="inherit_id" ref="hr_contract.hr_contract_view_form"/>
+          <field name="arch" type="xml">
+
+              <xpath expr="//field[@name='struct_id']" position="after">
+                  <field name="media_jornada"/>
+              </xpath>
+
+          </field>
+      </record>
     <!-- Inherit Form View to Modify it -->
     <record id="emsin.view_repair_order_form" model="ir.ui.view">
         <field name="name">emsin.view.repair.order.form</field>
