--- a/views/views.xml
+++ b/views/views.xml
@@ -2,6 +2,20 @@
   <data>
 
       <!-- Inherit Form View to Modify it -->
+      <record id="emsin.view_picking_form" model="ir.ui.view">
+          <field name="name">emsin.view.picking.form</field>
+          <field name="model">stock.picking</field>
+          <field name="inherit_id" ref="stock.view_picking_form"/>
+          <field name="arch" type="xml">
+
+              <xpath expr="//field[@name='backorder_id']" position="after">
+                  <field name="invoice_id" />
+              </xpath>
+
+          </field>
+      </record>
+
+      <!-- Inherit Form View to Modify it -->
       <record id="emsin.hr_contract_view_form" model="ir.ui.view">
           <field name="name">emsin.hr.contract.view.form</field>
           <field name="model">hr.contract</field>
