--- a/views/views.xml
+++ b/views/views.xml
@@ -8,7 +8,7 @@
           <field name="inherit_id" ref="base.view_company_form"/>
           <field name="arch" type="xml">
 
-              <xpath expr="//field[@name='report_header']" position="after">
+              <xpath expr="//field[@name='country_id']" position="after">
                   <field name="logo_chile_proveedores"/>
                   <field name="logo_sicep"/>
                   <field name="overdue_msg"/>
