Dependencia de Repair

--- a/views/views.xml
+++ b/views/views.xml
@@ -47,7 +47,7 @@
     <!-- Inherit Form View to Modify it -->
     <record id="emsin.view_repair_order_form" model="ir.ui.view">
         <field name="name">emsin.view.repair.order.form</field>
-        <field name="model">mrp.repair</field>
+        <field name="model">repair.order</field>
         <field name="inherit_id" ref="repair.view_repair_order_form"/>
         <field name="arch" type="xml">
 
