Corrige la mierda de calculo de neto

--- a/views/views.xml
+++ b/views/views.xml
@@ -1,7 +1,7 @@
 <odoo>
   <data>
 
-    <template id="report_orden_reparacion_custom" inherit_id="mrp_repair.report_mrprepairorder">
+    <template id="report_orden_reparacion_custom" inherit_id="repair.report_repairorder">
         <xpath expr="//div[@class='mt32']" position="after">
             <div class="row mt32 mb32">
                 <div t-if="o.equipo_id.name" class="col-xs-2">
